--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    implementation 'info.picocli:picocli:4.7.1'
+    annotationProcessor 'info.picocli:picocli-codegen:4.7.1'
 }
 
 test {
