Package refactor - added main package jenigma

--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ compileJava {
 jar {
     manifest {
         attributes(
-            'Main-Class': 'ex.neskoro.cli.Main'
+            'Main-Class': 'ex.neskoro.jenigma.cli.Main'
         )
     }
     from {
